fix align

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,6 @@ body {
 .item {
   display: flex;
   gap: 8px;
-  align-items: center;
   font-size: 24px;
   padding: 8px;
   transition: 0.3s;
